src/test/deca/context/invalid/minus_int_minus_undefvar_context.deca
// Description :
//
//      Test contextuellement incorrect de la soustraction d'un int et de la variable stockant la soustraction sans définition
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
    int y= 3 - y;
}